--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
 {% include head.html %}
 <body>
 	<header class="masthead">
-		<h3 class="masthead-title">
-			<a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+		<h1 class="masthead-title">
+			<a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
 			<nav>
 				<a href="">about</a>
 				<a href="">rss</a>
 			</naw>
-		</h3>
+		</h1>
 	</header>
 
 	<div class="wrapper">
