Start to add style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,15 @@
 <body>
 	<header class="masthead">
 		<h1 class="masthead-title">
-			<a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
-			<nav>
-				<a href="">about</a>
-				<a href="">rss</a>
-			</naw>
+			<a href="{{ site.baseurl }}" title="Home">nathun smitty dot&nbsp;com</a>
 		</h1>
+		<nav>
+			<a href="">about</a>
+			<a href="">rss</a>
+		</nav>
 	</header>
 
-	<div class="wrapper">
-		{{ content }}
-	</div>
+	{{ content }}
 
 	<footer class="footer">
 		<small>
