--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,28 +2,25 @@
 <html lang="en">
 {% include head.html %}
 <body>
-	<header class="masthead">
-		<h1 class="masthead-title">
-			<a href="{{ site.baseurl }}" title="Home">nathun smitty dot&nbsp;com</a>
-		</h1>
-		<nav>
-	        {% for page in site.pages %}
-	          {% if page.title %}
-	          <a href="{{ page.url }}">{{ page.title }}</a>
-	          {% endif %}
-	        {% endfor %}
-			<a href="">rss</a>
-		</nav>
-	</header>
+  <header class="masthead">
+    <h1 class="masthead-title">
+      <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
+    </h1>
+    <nav>
+      {% for page in site.pages %}
+        {% if page.title %}
+            <a href="{{ page.url }}">{{ page.title }}</a>
+        {% endif %}
+      {% endfor %}
+    </nav>
+  </header>
 
-	{{ content }}
+  {{ content }}
 
-	<footer class="footer">
-		<small>
-			&copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time> Nathan Smith. <a rel="license" href="{{ site.license.url }}">{{ site.license.text }}</a>.
-		</small>
-	</footer>
-
+  <footer class="footer">
+    <small>
+      &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}. <a rel="license" href="{{ site.license.url }}">{{ site.license.text }}</a>.
+    </small>
+  </footer>
 </body>
-
 </html>
