--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,19 @@
     {{ site.title }}
   </title>
 
-  <link rel="stylesheet" href="/css/main.css" />
+  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css" />-->
+  <link rel="stylesheet" href="/styles.css" />
+
+
+  <script src="http://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="/js/bigfoot.min.js"></script>
+<script type="text/javascript">
+	var bigfoot = $.bigfoot(
+		{
+		actionOriginalFN: "ignore",
+		positionContent: "true"
+		}
+	);
+</script>
 
 </head>
