--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,9 @@
       <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
     </h1>
     <nav>
-      {% for page in site.pages %}
-        {% if page.title %}
-            <a href="{{ page.url }}">{{ page.title }}</a>
-        {% endif %}
-      {% endfor %}
+      <a href="/about">About</a>
+      <a href="/archive">Archive</a>
+      <!--<a href="/atom">Feed</a>-->
     </nav>
   </header>
 
