--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,10 @@
 <head>
   <meta charset="utf-8">
 
+  <!-- Enable responsiveness on mobile devices-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+
+
   <title>
     {{ site.title }}
   </title>
