Minor style stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
   {{ content }}
 
-  <footer class="footer">
+  <footer>
     <small>
       &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}. <a rel="license" href="{{ site.license.url }}">{{ site.license.text }}</a>.
     </small>
