--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,8 +1,10 @@
+---
+layout: landing
+---
+
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
   {% include head.html %}
-
   <body>
       <main>
         {{ content }}
