--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,8 +4,8 @@
 
 * {
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html,
@@ -28,13 +28,14 @@ body {
   color: $body-color;
   background-color: $body-bg;
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
 a {
-  color: $link-color;
+  color: black;
   text-decoration: none;
+  font-weight: bold;
 
   // `:focus` is linked to `:hover` for basic accessibility
   &:hover,
@@ -51,28 +52,13 @@ img {
   display: block;
   max-width: 100%;
   margin: 0 0 1rem;
-  border-radius: 5px;
 }
 
-table {
-  margin-bottom: 1rem;
+.nathan {
+  display: block;
+  margin: 0 auto 35px;
+  border-radius: 50%;
   width: 100%;
-  font-size: 85%;
-  border: 1px solid #e5e5e5;
-  border-collapse: collapse;
-}
-
-td,
-th {
-  padding: 0.25rem 0.5rem;
-  border: 1px solid #e5e5e5;
-}
-
-th {
-  text-align: left;
-}
-
-tbody tr:nth-child(odd) td,
-tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9;
+  max-width: 45%;
+  border: 15px solid rgba(0, 0, 0, 0.025);
 }
