--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,14 +2,10 @@
 //
 // Styles for managing the structural hierarchy of the site.
 
-body {
+main {
   max-width: 38rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   margin-left: auto;
   margin-right: auto;
-}
-
-footer {
-  margin-bottom: 2rem;
 }
