--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -56,7 +56,7 @@ img {
 
 .nathan {
   display: block;
-  margin: 0 auto 35px;
+  margin: 10px auto 35px;
   border-radius: 50%;
   width: 100%;
   max-width: 45%;
