Minor css stuff

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -6,7 +6,7 @@ layout: landing
 <html>
   {% include head.html %}
   <body>
-      <main>
+      <main class="landing">
         {{ content }}
       </main>
   </body>
