--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,6 +3,7 @@
 // Styles for managing the structural hierarchy of the site.
 
 main {
+  position: relative;
   max-width: 38rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
