--- a/_sass/_landing.scss
+++ b/_sass/_landing.scss
@@ -1,7 +1,7 @@
 .landing {
   .nathan {
     display: block;
-    margin: 10 auto 35px;
+    margin: 10px auto 35px;
     border-radius: 50%;
     width: 100%;
     max-width: 45%;
