--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
   {% include head.html %}
-
   <body>
-      <main>
+    <div class="container">
+      <header>
+        <h1><a href="/">Nathan Smith</a></h1>
+        <nav>
+          <a href="/posts">Posts</a>
+          <a href="/portfolio">Portfolio</a>
+        </nav>
+      </header>
+      <main class="landing">
         {{ content }}
       </main>
-  </body>
+      {% include analytics.html %}
+    </body>
+  </div>
 </html>
