--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,8 +4,8 @@
 
 * {
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
@@ -19,7 +19,7 @@ html {
   font-size: $root-font-size;
   line-height: $root-line-height;
 
-  @media (min-width: $large-breakpoint) {
+  @include media('>=tablet') {
     font-size: $large-font-size;
   }
 }
