--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,4 +1,4 @@
-<!-- Piwik -->
+<!-- Piwik
 <script type="text/javascript">
   var _paq = _paq || [];
   _paq.push(['trackPageView']);
@@ -12,4 +12,4 @@
   })();
 </script>
 <noscript><p><img src="//162.243.157.130/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
-<!-- End Piwik Code -->
+ End Piwik Code -->
