--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,17 @@
     {{ site.title }}
   </title>
 
-  <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
+  {% if page.title == site.title %}
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/bigfoot-default.css">
+  {% else %}
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/bigfoot-number.css">
+  {% endif %}
+
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/styles.css">
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" ></script>
-<script type="text/javascript" src="/js/bigfoot.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/js/bigfoot.min.js"></script>
 <script type="text/javascript">
   $.bigfoot();
 </script>
