--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
     <div class="container">
-      <header>
+      <header class="masthead">
         <h1><a href="/">Nathan Smith</a></h1>
         <nav>
           <a href="/posts">Posts</a>
