--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <article class="post">
-  <header>
-    <h2 class="post-title">{{ page.title }}</h2>
-    <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date: "%B %-d, %Y" }}</time>
+  <header class="post-header">
+    <h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
+    <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time>
   </header>
   {{ content }}
 </article>
