--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,15 +1,15 @@
-<!-- Piwik
+<!-- Piwik -->
 <script type="text/javascript">
   var _paq = _paq || [];
+  // tracker methods like "setCustomDimension" should be called before "trackPageView"
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//162.243.157.130/piwik/";
+    var u="//analytics.nathansmith.io/";
     _paq.push(['setTrackerUrl', u+'piwik.php']);
     _paq.push(['setSiteId', '1']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<noscript><p><img src="//162.243.157.130/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
- End Piwik Code -->
+<!-- End Piwik Code -->
