--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,8 @@
       <main class="landing">
         {{ content }}
       </main>
-      {% include analytics.html %}
-    </body>
-  </div>
+    </div>
+    {% include scripts.html %}
+    {% include analytics.html %}
+  </body>
 </html>
