--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" ></script>
-<script type="text/javascript" src="{{ site.baseurl }}/js/bigfoot.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{ site.baseurl }}/js/vendor/jquery-1.12.4.min.js"><\/script>')</script>
+
+<script type="text/javascript" src="{{ site.baseurl }}/js/vendor/bigfoot.min.js"></script>
 <script type="text/javascript">
   $.bigfoot();
 </script>
