--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -28,7 +28,7 @@ body {
   color: $body-color;
   background-color: $body-bg;
   -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
@@ -53,4 +53,10 @@ img {
   display: block;
   max-width: 100%;
   margin: 0 auto 1rem;
+}
+
+footer {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 0.8rem;
 }
