Some work on getting the post up

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
   margin: 0.5em 0;
   padding: 1em;
   overflow: auto;
+  font-size: 12px;
 }
 
 .gatsby-highlight pre[class*='language-'].line-numbers {
