--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,26 @@
+:root {
+  --color-primary: #fff;
+  /* --color-primary-hover: rgba(255; */
+  /* --color-background */
+}
+
+/* background: '#0e0e0e', */
+/* border: 'rgba(255, 255, 255, 0.025)', */
+/* linkUnderline: 'rgba(255, 255, 255, 0.1)', */
+/* }, */
+
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
+
+.markdown {
+  & p {
+    @apply mt-6;
+  }
+}
+
 .gatsby-highlight {
   background-color: rgb(45, 45, 45);
   border-radius: 0.3em;
