--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -137,18 +137,64 @@ body {
   }
 }
 
+.contents {
+  @apply text-sm;
+  li,
+  p {
+    @apply m-0;
+  }
+  ul {
+    @apply my-0;
+  }
+}
+
+h2 {
+  @apply text-3xl;
+  @apply my-6;
+  @apply font-extrabold;
+}
+
+h3 {
+  @apply text-2xl;
+  @apply my-4;
+  @apply font-extrabold;
+}
+
+h4 {
+  @apply text-xl;
+  @apply my-4;
+  @apply font-extrabold;
+}
+
+.header-link path {
+  @media (prefers-color-scheme: dark) {
+    fill: white;
+  }
+}
+
+.footnotes {
+  @apply bg-gray-800;
+  @apply rounded-sm;
+  @apply p-4;
+}
+
 .gatsby-highlight {
   background-color: rgb(45, 45, 45);
   border-radius: 0.3em;
   margin: 0.5em 0;
   padding: 1em;
   overflow: auto;
+  font-size: 1rem;
 }
 
 .gatsby-highlight pre[class*='language-'].line-numbers {
   padding: 0;
   padding-left: 2.8em;
   overflow: initial;
+}
+
+code.language-text {
+  font-size: 0.8em;
 }
 
 .text-container {
