--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,6 +32,12 @@
   }
 }
 
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
+
 body {
   color: var(--color-primary);
   background-color: var(--color-background);
@@ -39,7 +45,7 @@ body {
 
 .link {
   color: var(--color-primary);
-  font-weight: bold;
+  @apply font-bold;
   border-bottom: 1px solid var(--color-link-underline);
   transition-duration: 50ms, 0.1s, 0.1s;
   transition-timing-function: linear;
@@ -125,26 +131,33 @@ body {
   }
 }
 
-@tailwind base;
-
-@tailwind components;
-
-@tailwind utilities;
-
 .markdown {
-  & p {
+  p {
     @apply mb-6;
+  }
+
+  p > a {
+    @apply link;
   }
 }
 
-.contents {
+.table-of-contents {
   @apply text-sm;
+  @apply mb-4;
+  @apply text-gray-700;
+
+  a {
+    @apply link;
+  }
   li,
   p {
     @apply m-0;
   }
   ul {
     @apply my-0;
+  }
+  ol {
+    @apply list-decimal;
   }
 }
 
@@ -205,24 +218,4 @@ code.language-text {
   @media (max-height: 560px) {
     height: auto;
   }
-}
-
-.dropcap {
-  color: red;
-  float: left;
-  font-size: 5rem;
-  line-height: 3.5rem;
-  margin: 0;
-  padding: 0.5rem;
-}
-
-/* hide visually from eyes, but not aurally from screen readers */
-.invisible {
-  clip: rect(1px, 1px, 1px, 1px);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  top: auto;
-  white-space: nowrap;
-  width: 1px;
 }
