--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -131,6 +131,14 @@ body {
   }
 }
 
+.nonanimated-link {
+  transition: none;
+  border: none;
+  &:hover {
+    padding-bottom: 0;
+  }
+}
+
 .markdown {
   p {
     @apply my-3;
@@ -138,6 +146,10 @@ body {
 
   a {
     @apply link;
+  }
+
+  .header-link {
+    @apply nonanimated-link;
   }
 
   ol,
@@ -156,6 +168,10 @@ body {
   figure {
     @apply mx-auto;
     @apply my-4;
+
+    a {
+      @apply nonanimated-link;
+    }
 
     figcaption {
       @apply mt-1;
@@ -219,6 +235,7 @@ h5 {
 }
 
 .footnotes {
+  @apply text-lg text-gray-800;
   @apply border-solid border-t border-gray-400;
   @apply p-4;
 
