--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,7 +44,7 @@ body {
 }
 
 .link {
-  color: var(--color-primary);
+  /* color: var(--color-primary); */
   @apply font-bold;
   border-bottom: 1px solid var(--color-link-underline);
   transition-duration: 50ms, 0.1s, 0.1s;
