--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,8 +7,6 @@
 
   --color-datadog: #774aa4;
   --color-ucla: #3284bf;
-  --color-cs: #000;
-  --color-dh: #000;
   --color-keybase: #fd7039;
   --color-autodesk: #87bc40;
   --color-dailybruin: #0080c6;
@@ -62,12 +60,6 @@ body {
   &.colored {
     &[href*='www.ucla.edu'] {
       color: var(--color-ucla);
-    }
-    &[href*='cs.ucla.edu'] {
-      color: var(--color-cs);
-    }
-    &[href*='dh.ucla.edu'] {
-      color: var(--color-dh);
     }
     &[href*='datadoghq.com'] {
       color: var(--color-datadog);
@@ -243,10 +235,11 @@ h5 {
 }
 
 .footnotes {
-  @apply text-lg text-gray-800;
-  @apply border-solid border-t border-gray-400;
-  @apply p-4;
-
+  @apply text-gray-800 border-gray-400;
+  @media (prefers-color-scheme: dark) {
+    @apply text-gray-200 border-gray-500;
+  }
+  @apply text-lg border-solid border-t p-4;
   li p {
     display: inline;
   }
