fix mobile width issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -264,6 +264,10 @@ pre[class*='language-'] {
   @apply rounded;
 }
 
+code[class*='language-'] {
+  word-break: break-all;
+}
+
 .dropcap {
   @apply float-left;
   font-size: 75px;
