--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,7 @@
 
 a {
   text-decoration: none;
+  color: black;
   font-weight: bold;
   border-bottom: 1px solid var(--color-link-underline);
   transition-duration: 50ms, 0.1s, 0.1s;
