--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,38 +1,34 @@
 {{ define "main" }}
-<content>
-  {{ if .Data.Singular }}
-  <h3 style="margin-bottom:0">Filtering for "{{ .Title }}"</h3>
-  <small>
-    <a href="{{ "/blog" | relURL }}">Remove filter</a>
-  </small>
-  {{ end }}
-  <ul class="blog-posts">
-    {{ range .Pages }}
-    <li>
-      <span>
-        <i>
-          <time datetime='{{ .Date.Format "2006-01-02" }}' pubdate>
-            {{ .Date.Format "02 Jan, 2006" }}
-          </time>
-        </i>
-      </span>
-      <a href="{{ .Permalink }}">{{ .Title }}</a>
-    </li>
-    {{ else }}
-    <li>
-      No posts yet
-    </li>
+  <content class="max-w-2xl my-auto mx-0 p-6 text-xl">
+    <h1 class="text-4xl mb-4">Posts</h1>
+
+    {{ if .Data.Singular }}
+      <h3 style="margin-bottom:0">Filtering for "{{ .Title }}"</h3>
+      <small>
+        <a href="{{ "/blog" | relURL }}">Remove filter</a>
+      </small>
     {{ end }}
-  </ul>
-  {{ if .Data.Singular }}
-  {{else}}
-    <small>
-      <div>
-        {{ range .Site.Taxonomies.tags }}
-        <a href="{{ .Page.Permalink }}">#{{ .Page.Title }}</a>&nbsp;
-        {{ end }}
-      </div>
-    </small>
+
+    <!-- Groups content by month according to the "date" field in front matter -->
+    <ul> {{ range .Pages.GroupByDate "2006" }}
+      <h3 class="mb-3 text-xl font-bold">{{ .Key }}</h3>
+      {{ range .Pages }}
+        <li class="mb-4">
+          <time class="block text-gray-500 text-xs -mb-1" datetime='{{ .Date.Format "2006-01-02"}}'>{{ .Date.Format "January 2" }}</time>
+          <a href="{{ .Permalink }}">{{ .Title }}</a>
+        </li>
+      {{ end }}
     {{ end }}
-</content>
+    </ul>
+    {{ if .Data.Singular }}
+    {{else}}
+      <small>
+        <div>
+          {{ range .Site.Taxonomies.tags }}
+            <a href="{{ .Page.Permalink }}">#{{ .Page.Title }}</a>&nbsp;
+          {{ end }}
+        </div>
+      </small>
+    {{ end }}
+  </content>
 {{ end }}
