--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,22 +1,29 @@
 {{ define "main" }}
-{{ if eq .Type "posts" }}{{ if not .Params.menu }}
-<h1>{{ .Title }}</h1>
-<div class="text-sm text-gray-600 mb-3">
 
-    <time datetime='{{ .Date.Format "2006-01-02" }}' pubdate>
-      {{ .Date.Format "January 2, 2006" }}
-    </time>
-    <span>{{.ReadingTime}} minute read</span>
+<h1 class="text-4xl mb-1 leading-none">{{ .Title }}</h1>
+<div class="text-sm text-gray-600 mb-3">
+  <time datetime='{{ .Date.Format "2006-01-02" }}' pubdate>
+    {{ .Date.Format "January 2, 2006" }}
+  </time>
+  ·
+  <span>{{.ReadingTime}} minute read</span>
 </div>
 
-    {{.ReadingTime}}
-{{ end }}{{ end }}
-<content>
+<details class="table-of-contents">
+  <summary class="text-lg">Table of Contents</summary>
+  <div>
+    {{.TableOfContents}}
+  </div>
+</details>
+
+
+<content class="markdown">
   {{ .Content }}
 </content>
+
 <p>
-  {{ range (.GetTerms "tags") }}
+{{ range (.GetTerms "tags") }}
   <a href="{{ .Permalink }}">#{{ .LinkTitle }}</a>
-  {{ end }}
+{{ end }}
 </p>
 {{ end }}
