--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,34 +1,32 @@
 {{ define "main" }}
-  <content class="max-w-2xl my-auto mx-0 p-6 text-xl">
-    <h1 class="text-4xl mb-4">Posts</h1>
+  <h1 class="text-4xl mb-4">Posts</h1>
 
-    {{ if .Data.Singular }}
-      <h3 style="margin-bottom:0">Filtering for "{{ .Title }}"</h3>
-      <small>
-        <a href="{{ "/blog" | relURL }}">Remove filter</a>
-      </small>
-    {{ end }}
+  <!-- {{ if .Data.Singular }} -->
+  <!--   <h3 style="margin-bottom:0">Filtering for "{{ .Title }}"</h3> -->
+  <!--   <small> -->
+  <!--     <a href="{{ "/blog" | relURL }}">Remove filter</a> -->
+  <!--   </small> -->
+  <!-- {{ end }} -->
 
-    <!-- Groups content by month according to the "date" field in front matter -->
-    <ul> {{ range .Pages.GroupByDate "2006" }}
-      <h3 class="mb-3 text-xl font-bold">{{ .Key }}</h3>
-      {{ range .Pages }}
-        <li class="mb-4">
-          <time class="block text-gray-500 text-xs -mb-1" datetime='{{ .Date.Format "2006-01-02"}}'>{{ .Date.Format "January 2" }}</time>
-          <a href="{{ .Permalink }}">{{ .Title }}</a>
-        </li>
-      {{ end }}
+  <!-- Groups content by month according to the "date" field in front matter -->
+  <ul> {{ range .Pages.GroupByDate "2006" }}
+    <h3 class="mb-3 text-xl font-bold">{{ .Key }}</h3>
+    {{ range .Pages }}
+      <li class="mb-4">
+        <time class="block text-gray-500 text-xs -mb-1" datetime='{{ .Date.Format "2006-01-02"}}'>{{ .Date.Format "January 2" }}</time>
+        <a href="{{ .Permalink }}">{{ .Title }}</a>
+      </li>
     {{ end }}
-    </ul>
-    {{ if .Data.Singular }}
-    {{else}}
-      <small>
-        <div>
-          {{ range .Site.Taxonomies.tags }}
-            <a href="{{ .Page.Permalink }}">#{{ .Page.Title }}</a>&nbsp;
-          {{ end }}
-        </div>
-      </small>
-    {{ end }}
-  </content>
+  {{ end }}
+  </ul>
+  {{ if .Data.Singular }}
+  {{else}}
+    <small>
+      <div>
+        {{ range .Site.Taxonomies.tags }}
+          <a href="{{ .Page.Permalink }}">#{{ .Page.Title }}</a>&nbsp;
+        {{ end }}
+      </div>
+    </small>
+  {{ end }}
 {{ end }}
