--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <a href="{{ "/" | relURL }}" class="title">
     <h2 class="m-0">{{ .Site.Title }}</h2>
   </a>
-  <nav>
+  <nav class="flex space-x-3">
     <a href="{{ "/" | relURL }}">Home</a>
     <a href="{{ "/portfolio" | relURL }}">Portfolio</a>
     <a href="{{ "/posts" | relURL }}">Posts</a>
