--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,3 +43,15 @@ a {
     padding-bottom: 1px;
   }
 }
+
+pre code {
+  padding: 2px 5px;
+  background-color: #f2f2f2;
+  color: #222;
+  display: block;
+  padding: 20px;
+  font-size: 14px;
+  @apply overflow-x-scroll;
+  word-break: keep-all;
+  @apply rounded;
+}
