--- a/layouts/shortcodes/portrait.html
+++ b/layouts/shortcodes/portrait.html
@@ -1,5 +1,5 @@
-<div >
+<div>
   <img
-    class="mx-auto max-w-xs max-h-xs rounded-full border-solid border-12 border-border"
-  src="https://via.placeholder.com/320">
+    class="portrait"
+    src="/nathan-cropped.jpg">
 </div>
