--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,8 @@
     --color-background: #1a1a1a;
     --color-border: rgba(255, 255, 255, 0.025);
     --color-link-underline: rgba(255, 255, 255, 0.1);
+
+    --image-filter: brightness(0.7);
   }
 }
 
@@ -55,3 +57,21 @@ a {
 /*   word-break: keep-all; */
 /*   @apply rounded; */
 /* } */
+
+.portrait {
+  filter: none;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 20rem;
+  max-width: 20rem;
+  border-radius: 9999px;
+  border-style: solid;
+  border-width: 12px;
+  border-color: var(--color-border);
+}
+
+@media (prefers-color-scheme: dark) {
+  .portrait {
+    filter: brightness(0.7);
+  }
+}
