--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,8 @@
     <h2 class="m-0">{{ .Site.Title }}</h2>
   </a>
   <nav class="flex space-x-3">
-    <a href="{{ "/" | relURL }}">Home</a>
-    <a href="{{ "/portfolio" | relURL }}">Portfolio</a>
-    <a href="{{ "/posts" | relURL }}">Posts</a>
+    <a class="nonanimated-link" href="{{ "/" | relURL }}">Home</a>
+    <a class="nonanimated-link" href="{{ "/portfolio" | relURL }}">Portfolio</a>
+    <a class="nonanimated-link" href="{{ "/posts" | relURL }}">Posts</a>
   </nav>
 </header>
