--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,7 @@
   --color-background: #fff;
   --color-border: rgba(0, 0, 0, 0.025);
   --color-link-underline: rgba(0, 0, 0, 0.1);
+  --image-filter: none;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -46,20 +47,19 @@ a {
   }
 }
 
-/* pre code { */
-/*   padding: 2px 5px; */
-/*   background-color: #f2f2f2; */
-/*   color: #222; */
-/*   display: block; */
-/*   padding: 20px; */
-/*   font-size: 14px; */
-/*   @apply overflow-x-scroll; */
-/*   word-break: keep-all; */
-/*   @apply rounded; */
-/* } */
+.nonanimated-link {
+  border: none;
+  transition: none;
+}
+
+.nonanimated-link:hover {
+    opacity: 0.6;
+    border: none;
+    padding: 0;
+  }
 
 .portrait {
-  filter: none;
+  filter: var(--image-filter);
   margin-left: auto;
   margin-right: auto;
   max-height: 20rem;
@@ -68,10 +68,4 @@ a {
   border-style: solid;
   border-width: 12px;
   border-color: var(--color-border);
-}
-
-@media (prefers-color-scheme: dark) {
-  .portrait {
-    filter: brightness(0.7);
-  }
 }
