--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -1,4 +1,12 @@
-/* Background */ .chroma { color: #f8f8f2; background-color: #272822 }
+/* Background */
+pre {
+  border-radius: .25rem;
+  color: #f8f8f2;
+  background-color: #272822;
+  padding: 1em;
+  margin: .5em 0;
+  overflow: auto;
+}
 /* Other */ .chroma .x {  }
 /* Error */ .chroma .err { color: #960050; background-color: #1e0010 }
 /* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
