--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body>
+<body class="bg-gray-50 dark:bg-gray-800 text-gray-900 dark:text-white">
   <div class="max-w-2xl mx-auto my-0 p-6 text-lg">
     {{ if not (.IsHome)}}
       {{- partial "header.html" . -}}
