--- a/layouts/shortcodes/portrait.html
+++ b/layouts/shortcodes/portrait.html
@@ -1,5 +1,5 @@
 <div>
   <img
-    class="portrait"
+    class="mx-auto max-w-xs max-h-xs rounded-full border-solid border-12 portrait border-gray-100 dark:border-gray-800 filter-none dark:filter-dark"
     src="/nathan-cropped.jpg">
 </div>
