--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -13,7 +13,7 @@
     <h3 class="mb-3 text-xl font-bold">{{ .Key }}</h3>
     {{ range .Pages }}
       <li class="mb-4">
-        <time class="block text-gray-500 text-xs -mb-1" datetime='{{ .Date.Format "2006-01-02"}}'>{{ .Date.Format "January 2" }}</time>
+        <time class="block text-gray-500 dark:text-gray-400 text-xs -mb-1" datetime='{{ .Date.Format "2006-01-02"}}'>{{ .Date.Format "January 2" }}</time>
         <a href="{{ .Permalink }}">{{ .Title }}</a>
       </li>
     {{ end }}
