--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="prose prose-lg">
+  <div class="prose prose-lg dark:prose-dark">
     {{ .Content }}
   </div>
 {{ end }}
