--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,10 @@
 <header class="mb-6">
   <a href="{{ "/" | relURL }}" class="title">
-    <h2 class="m-0">{{ .Site.Title }}</h2>
+    <h1 class="text-2xl font-bold leading-7 sm:text-3xl sm:truncate">{{ .Site.Title }}</h2>
   </a>
-  <nav class="flex space-x-3">
-    <a class="nonanimated-link" href="{{ "/" | relURL }}">Home</a>
-    <a class="nonanimated-link" href="{{ "/portfolio" | relURL }}">Portfolio</a>
-    <a class="nonanimated-link" href="{{ "/posts" | relURL }}">Posts</a>
+  <nav class="flex space-x-5">
+    <a class="nonanimated-link" href="{{ "/" | relURL }}">home</a>
+    <a class="nonanimated-link" href="{{ "/portfolio" | relURL }}">portfolio</a>
+    <a class="nonanimated-link" href="{{ "/posts" | relURL }}">posts</a>
   </nav>
 </header>
