--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 
 <h1 class="text-4xl mb-1 leading-none">{{ .Title }}</h1>
 
-<content class="markdown">
+<content class="prose dark:prose-dark">
   {{ .Content }}
 </content>
 
