Update dark theme, using tailwind typography's builtin dark mode

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="prose prose-lg dark:prose-dark">
+  <div class="prose prose-lg dark:prose-invert">
     {{ .Content }}
   </div>
 {{ end }}
