--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -34,7 +34,7 @@
           </div>
 
         </div>
-        <div class="prose dark:prose-dark">
+        <div class="prose dark:prose-invert">
         {{.Content}}
         </div>
       </li>
