--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -15,7 +15,7 @@
 </details>
 
 
-<content class="prose dark:prose-dark">
+<content class="prose dark:prose-invert">
   {{ .Content }}
 </content>
 
