--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
-  <h1 class="text-5xl mb-4 font-bold">Projects</h1>
+  <h1 class="text-5xl mb-4 font-bold">Portfolio</h1>
   <p class="mb-8">
-    Here are some projects I’ve worked on.
+    Here's a non-exhaustive list of projects I’ve worked on.
   </p>
   {{.Content}}
   <ul>
