Finish up draft

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,7 +26,7 @@
 </head>
 
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-white">
-  <div class="max-w-2xl mx-auto my-0 p-6 text-lg">
+  <div class="max-w-2xl mx-auto mt-0 mb-8 p-6 text-lg">
     {{ if not (.IsHome)}}
       {{- partial "header.html" . -}}
     {{end}}
