--- a/layouts/shortcodes/buttonlink.html
+++ b/layouts/shortcodes/buttonlink.html
@@ -1,5 +1,5 @@
 <div class="not-prose flex flex-col items-center">
-  <a href="{{ .Get "href" }}" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+  <a href="{{ .Get "href" }}" class="inline-flex items-center px-6 py-3 hover:py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
     {{ .Get "label" }}
   </a>
 </div>
